2009-03-24  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (get_file_pixbuf): Use a better key
	for the icon hash table, g_icon_to_string().

2009-03-22  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (add_no_files_found_message),
	(spawn_search_command), (create_search_results_section):
	* gsearchtool.h: Hide the treeview columns when files
	are not found. 

2009-03-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (set_constraint_gconf_boolean): Typo

2009-03-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (open_file_cb), (open_folder_cb),
	(move_to_trash_cb), (file_button_release_event_cb), 
	(drag_file_cb), (save_results_cb):
	* gsearchtool-support.c (open_file_with_filemanager),
	(open_file_with_application):
	* gsearchtool-support.h:
	* gsearchtool.c (add_file_to_search_results),
	(add_no_files_found_message), (handle_goption_args),
	(handle_search_command_stdout_io), 
	(create_search_results_section):
	* gsearchtool.h:
	Bug 557256: Find results missing files with incorrect 
	filename encoding

2009-03-16  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (click_help_cb): Replace deprecated
	gnome_help_display_desktop_on_screen() with gtk_show_uri().
	
2009-03-16  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.1:  Update man page

2009-03-16  Dennis Cranston  <dennis_cranston@yahoo.com>

	* Makefile.am:
	* gnome-search-tool.schemas.in:
	* gsearchtool-callbacks.c (look_in_folder_changed_cb),
	(open_file_event_cb), (open_file_cb), (open_folder_cb),
	(file_changed_cb), (move_to_trash_cb), (file_key_press_event_cb),
	(open_with_list_sort), (build_popup_menu_for_file),
	(file_button_release_event_cb), (file_event_after_cb),
	(file_motion_notify_cb), (drag_file_cb):
	* gsearchtool-callbacks.h:
	* gsearchtool-spinner.c (gsearch_spinner_cache_data_load),
	(bump_spinner_frame_cb):
	* gsearchtool-support.c (gsearchtool_gconf_set_string),