@@ -1,3 +1,8 @@
+2009-03-29  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c (setup_case_insensitive_arguments): If grep
+	supports the -I argument then use it. Bug 568840.
+
 2009-03-24  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-support.c (get_file_pixbuf): Use a better key
